argocd-app/virtaul-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - argocd-gateway
  hosts:
    - "www.argocd.com"
  http:
    - route:
      - destination:
          host: argocd-server.argocd.svc.cluster.local
          port:
            number: 80
